<resources>
    <string name="app_name">WsInventario</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



    <!-- Codigo -->
    <string name="title_activity_insertar">Insertar</string>
    <string name="insertar">Insertar</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="categoria">Categoria</string>
    <string name="proveedor">Proveedor</string>
    <string name="guardar">Guardar</string>

    <string name="actualizar">Actualiza</string>
    <string name="descargarCatalogo">Descargar Catalogo</string>
    <string name="cargarDatos">Cargar Datos</string>
    <string name="title_activity_insertar_categoria">InsertarCategoria</string>
    <string name="title_activity_insertar_proveedor">InsertarProveedor</string>

    <string name="appaterno">Apellido Paterno</string>
    <string name="apmaterno">Apellido Materno</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>

</resources>
