<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <!-- Codigo -->
    <item
        android:id="@+id/insertar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/insertar"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/actualizar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/actualizar"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/descargarCatalogo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/descargarCatalogo"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/cargarDatos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cargarDatos"
        tools:ignore="AppCompatResource" />
</menu>
