<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.workstation.wsinventario.InsertarProveedor"
    android:orientation="vertical"
    android:background="@mipmap/back">

    <!-- Codigo-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa los Datos:" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <EditText
        android:id="@+id/edtidproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtnombreproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtappaternoproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/appaterno"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtapmaternoproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apmaterno"
        android:inputType="text" />

    <EditText
        android:id="@+id/edttelefonoproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtemailproveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnguardarproveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />


</LinearLayout>
